[metadata]
name = nfvbench
summary = An NFV benchmarking tool for Mercury OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    nfvbench

[entry_points]
console_scripts =
    nfvbench = nfvbench.nfvbench:main
    nfvbench_client = client.nfvbench_client:main
    nfvbench_cleanup = client.nfvbench_cleanup:main

[compile_catalog]
directory = nfvbench/locale
domain = nfvbench

[update_catalog]
domain = nfvbench
output_dir = nfvbench/locale
input_file = nfvbench/locale/nfvbench.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nfvbench/locale/nfvbench.pot

[wheel]
universal = 1
