# Copyright 2017 Cisco Systems, Inc.  All rights reserved.
#
#    Licensed under the Apache License, Version 2.0 (the "License"); you may
#    not use this file except in compliance with the License. You may obtain
#    a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
#    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
#    License for the specific language governing permissions and limitations
#    under the License.

[metadata]
name = nfvbench
summary = An NFV benchmarking tool for Mercury OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    nfvbench

[entry_points]
console_scripts =
    nfvbench = nfvbench.nfvbench:main
    nfvbench_client = client.nfvbench_client:main
    nfvbench_cleanup = cleanup.nfvbench_cleanup:main

[compile_catalog]
directory = nfvbench/locale
domain = nfvbench

[update_catalog]
domain = nfvbench
output_dir = nfvbench/locale
input_file = nfvbench/locale/nfvbench.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nfvbench/locale/nfvbench.pot

[wheel]
universal = 1
